# car_calculator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_georgia.md  COMMIT_GUIDE_SPRINT4.md  DUTY_FIX_REPORT.md  Dockerfile  NEXT_STEPS.md  README.md  SPRINT_6_CHECKLIST.md  amvera.yml  analyze_optimal_age.py  analyze_prohibitive_utilization.py  demo_age_paradox.py  demo_prohibitive_examples.py  docker-compose.yml  pyproject.toml  requirements.txt  test_duty_check.py  test_new_utilization.py  test_sprint4_duties.py
app/: main.py  struct_logger.py
app/api/: routes.py
app/bot/: keyboards.py  main.py
app/bot/handlers/: config.py  start.py
app/bot/middlewares/: __init__.py  admin_check.py
app/calculation/: engine.py  models.py  rounding.py  tariff_tables.py
app/core/: messages.py  settings.py
app/services/: cbr.py
app/webapp/: index.html  index.html.backup  manifest.json  styles.css  sw.js
app/webapp/css/: base.css  components.css  hints.css  telegram.css  variables.css
app/webapp/js/: README.md
app/webapp/js/config/: constants.js  messages.js
app/webapp/js/modules/: api.js  hints.js  ui.js  validator.js
app/webapp/js/utils/: dom.js  formatters.js
config/: commissions.yml  duties.yml  duties_v1_backup_20251208.yml  fees.yml  rates.yml  utilization_2025.yml
docs/: AGE_ANALYSIS.md  AIOGRAM_HTML_ESCAPING.md  API_RESULT_FLOW.md  BUGFIX_2025_12_07.md  BUGFIX_CALCULATE_BUTTON.md  BUGFIX_CHECKLIST.md  BUGFIX_SUMMARY.md  BUGFIX_TESTING_GUIDE.md  CONFIG_ADMIN_GUIDE.md  CONFIG_CONCURRENCY.md  CONFIG_INCIDENT_PLAYBOOK.md  CONFIG_MANAGEMENT.md  CONFIG_STORAGE_ANALYSIS.md  CONFIG_USER_MANUAL.md  COUNTRY_EMOJI_GUIDE.md  CSS_MODULES_REFERENCE.md  DOCKER_CONFIGURATION_AUDIT.md  DOCKER_CONFIG_SUMMARY.md  FIX_RESULTS_DISPLAY.md  FLAG_TO_FRUIT_MIGRATION.md  HTML_ESCAPING_FIX_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_REFERENCE_AGE_OPTIMAL.md  QUICK_REFERENCE_POWER_LIMITS.md  QUICK_TEST.md  README_DOCS.md  README_WEBAPP_REFACTORING.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md  SESSION_REPORT_2025_12_07.md  SPECIFICATION.md  SPRINT_0_COMPLETED.md  SPRINT_0_GIT_COMMIT.md  SPRINT_0_SUMMARY.md  SPRINT_1_COMPLETED.md  SPRINT_2_COMPLETED.md  SPRINT_2_FIX.md  SPRINT_2_SUMMARY.md  SPRINT_2_TESTING_GUIDE.md  SPRINT_3_COMPLETED.md  (+38 more)
docs/sprint_prompts/: COMMIT_MESSAGE.md  README.md  SPRINT_10_FINALIZATION.md  SPRINT_4_DUTIES_COMMISSIONS.md  SPRINT_5_API_META.md  SPRINT_6_FRONTEND_WEBAPP.md  SPRINT_7_TELEGRAM_BOT.md  SPRINT_8_TESTS.md  SPRINT_9_DOCUMENTATION.md  SUMMARY.md
docs/sprints/: sprint0_overview.md  sprint1_bank_commission_config.md  sprint2_engine_and_meta_design.md  sprint3_api_and_clients_design.md  sprint4_implementation_and_tests_plan.md
nginx/: Dockerfile  entrypoint.sh
nginx/conf.d/: app_http.conf.template  app_https.conf.template
scripts/: commit_bugfix.sh  run.sh  run_api_and_bot.sh  update_test_expectations.py  webapp_refactoring_init.sh
tests/: conftest.py
tests/functional/: README_API_TESTS.md  test_api.py  test_api_bank_commission.py  test_api_validation.py  test_cbr.py  test_config_management_e2e.py  test_engine.py
tests/manual/: test_api_client.html  test_bot_handlers_sprint7.py  test_engine_power_field.html  test_formatters.html  test_hints_mvp.html  test_share_result_bugfix.py  test_ui_module.html  test_validator.html
tests/test_data/: cases.yml  cases_v1_backup_20251208.yml
tests/test_data/config/: commissions_company_only.yml  commissions_with_bank.yml
tests/test_data/fixtures/: duties_sample.yml  rates_static.yml
tests/unit/: test_admin_middleware.py  test_bank_commission.py  test_config_download.py  test_config_handlers.py  test_config_reload.py  test_config_upload.py  test_engine_bank_commission.py  test_engine_helpers.py  test_engine_integration.py  test_models_breakdown.py  test_models_meta.py  test_models_validation.py  test_rates_used_meta.py  test_rounding.py  test_settings_admin_ids.py  test_tariff_tables.py  test_utilization_v2.py
