[project]
name = "car-calculator"
version = "0.1.0"
description = ""
authors = [
    { name = "akm77", email = "aleksey.kotryakhov@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "poetry-core (>=2.1.3,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.1.3,<3.0.0"]
build-backend = "poetry.core.masonry.api"
